...
    val token = sharedPreferences.getString("session_token", null)


    Box(
        modifier = Modifier
            .fillMaxSize()
            .testTag("adminMenu")
    ) {
        Column(
            modifier = Modifier
                .align(Alignment.Center) // Centra tot el contingut
                .padding(16.dp),
            horizontalAlignment = Alignment.CenterHorizontally // Centrar els elements horitzontalment
...
